--- a/index.html
+++ b/index.html
@@ -9,19 +9,42 @@
         padding: 0;
         height: 100%;
         background: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .unicorn-wrapper {
+        width: 100%;
+        max-width: 1440px;
+        aspect-ratio: 1440 / 900;
+      }
+
+      .unicorn-embed {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
-    <div data-us-project="hr1f8iuHw9s6Mw8Wb1sv" style="width:1440px; height: 900px"></div>
+    <div class="unicorn-wrapper">
+      <div
+        class="unicorn-embed"
+        data-us-project="hr1f8iuHw9s6Mw8Wb1sv">
+      </div>
+    </div>
+
     <script type="text/javascript">
       !function(){
         if(!window.UnicornStudio){
-          window.UnicornStudio={isInitialized:!1};
-          var i=document.createElement("script");
-          i.src="https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
-          i.onload=function(){
-            window.UnicornStudio.isInitialized||(UnicornStudio.init(),window.UnicornStudio.isInitialized=!0);
+          window.UnicornStudio = { isInitialized: false };
+          var i = document.createElement("script");
+          i.src = "https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
+          i.onload = function(){
+            if (!window.UnicornStudio.isInitialized) {
+              UnicornStudio.init();
+              window.UnicornStudio.isInitialized = true;
+            }
           };
           (document.head || document.body).appendChild(i);
         }
