--- a/index.html
+++ b/index.html
@@ -9,34 +9,23 @@
         padding: 0;
         height: 100%;
         background: #000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
       }
 
-      .unicorn-wrapper {
-        width: 100%;
-        max-width: 1440px;
-        aspect-ratio: 1440 / 900;
-      }
-
-      .unicorn-embed {
-        width: 100%;
-        height: 100%;
+      #unicorn-container {
+        width: 100vw;
+        height: 100vh;
       }
     </style>
   </head>
   <body>
-    <div class="unicorn-wrapper">
-      <div
-        class="unicorn-embed"
-        data-us-project="hr1f8iuHw9s6Mw8Wb1sv">
-      </div>
-    </div>
+    <div
+      id="unicorn-container"
+      data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
+    ></div>
 
     <script type="text/javascript">
       !function(){
-        if(!window.UnicornStudio){
+        if (!window.UnicornStudio) {
           window.UnicornStudio = { isInitialized: false };
           var i = document.createElement("script");
           i.src = "https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
