--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       html, body {
         margin: 0;
         padding: 0;
-        width: 100vw;
-        height: 100vh;
-        background-color: #000;
+        height: 100%;
+        width: 100%;
+        background: #000;
       }
 
       #embed {
