--- a/index.html
+++ b/index.html
@@ -2,24 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Unicorn Embed</title>
+    <title>Unicorn Embed (scaled)</title>
     <style>
       html, body {
         margin: 0;
         padding: 0;
-        height: 100%;
         width: 100%;
+        height: 100%;
         background: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .scale-wrapper {
+        transform: scale(0.7); /* уменьшение на 30% */
+        transform-origin: top center;
+        width: 100% !important;
+        height: 100% !important;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       #embed {
         width: 100%;
         height: 100%;
+        min-height: 620px;
       }
     </style>
   </head>
   <body>
-    <div id="embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
+    <div class="scale-wrapper">
+      <div id="embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
+    </div>
 
     <script type="text/javascript">
       !function(){
