--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       }
 
       .scale-wrapper {
-        transform: scale(0.7); /* уменьшение на 30% */
-        transform-origin: top center;
+        transform: scale(0.6); /* уменьшение на 30% */
+        transform-origin: center;
         width: 100% !important;
         height: 100% !important;
         display: flex;
