--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Unicorn Embed (scaled)</title>
+    <title>Unicorn Embed (scaled & centered)</title>
     <style>
       html, body {
         margin: 0;
         padding: 0;
-        width: 100%;
         height: 100%;
-        background: #000;
+        width: 100%;
+        background-color: #000;
         display: flex;
         align-items: center;
         justify-content: center;
       }
 
       .scale-wrapper {
-        transform: scale(0.6); /* уменьшение на 30% */
-        transform-origin: center;
-        width: 100% !important;
-        height: 100% !important;
+        transform: scale(0.55); /* 55% от оригинального размера */
+        transform-origin: center center;
+        min-height: 620px;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -28,7 +28,6 @@
       #embed {
         width: 100%;
         height: 100%;
-    
       }
     </style>
   </head>
