--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Unicorn Embed (Centered)</title>
+    <title>Unicorn Embed</title>
     <style>
       html, body {
         margin: 0;
@@ -10,33 +10,16 @@
         height: 100%;
         width: 100%;
         background: #000;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .scale-wrapper {
-        transform: scale(0.55);
-        transform-origin: center center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: auto;
-        height: auto;
-    
       }
 
       #embed {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
-    <div class="scale-wrapper">
-      <div id="embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
-    </div>
+    <div id="embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
 
     <script type="text/javascript">
       !function(){
