--- a/index.html
+++ b/index.html
@@ -15,33 +15,32 @@
         justify-content: center;
       }
 
-      #embed {
+      .unicorn-embed {
         width: 100%;
         height: 100%;
       }
     </style>
   </head>
   <body>
-    <div id="embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
+    <div
+      class="unicorn-embed"
+      data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
+      data-scale="0.5"
+    ></div>
 
     <script type="text/javascript">
-      window.UnicornStudio = {
-        isInitialized: false,
-        config: {
-          scale: 0.5
-        }
-      };
-
       (function() {
-        var script = document.createElement("script");
-        script.src = "https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
-        script.onload = function() {
-          if (!window.UnicornStudio.isInitialized) {
-            UnicornStudio.init();
-            window.UnicornStudio.isInitialized = true;
-          }
-        };
-        (document.head || document.body).appendChild(script);
+        if (!window.UnicornStudio) {
+          var script = document.createElement("script");
+          script.src = "https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
+          script.onload = function() {
+            if (!window.UnicornStudio.isInitialized) {
+              UnicornStudio.init();
+              window.UnicornStudio.isInitialized = true;
+            }
+          };
+          (document.head || document.body).appendChild(script);
+        }
       })();
     </script>
   </body>
