--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Unicorn Embed</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-        background: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <title>Unicorn Embed</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
 
-      .unicorn-embed {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-  </head>
-  <body>
+    .scale-wrapper {
+      transform: scale(0.55); /* 55% от реального размера */
+      transform-origin: center center;
+    }
+
+    .unicorn-embed {
+      width: 1440px;
+      height: 900px;
+    }
+  </style>
+</head>
+<body>
+  <div class="scale-wrapper">
     <div
       class="unicorn-embed"
       data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
-      data-scale="0.5"
     ></div>
+  </div>
 
-    <script type="text/javascript">
-      (function() {
-        if (!window.UnicornStudio) {
-          var script = document.createElement("script");
-          script.src = "https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
-          script.onload = function() {
-            if (!window.UnicornStudio.isInitialized) {
-              UnicornStudio.init();
-              window.UnicornStudio.isInitialized = true;
-            }
-          };
-          (document.head || document.body).appendChild(script);
-        }
-      })();
-    </script>
-  </body>
+  <script type="text/javascript">
+    (function () {
+      if (!window.UnicornStudio) {
+        var script = document.createElement("script");
+        script.src = "https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.27/dist/unicornStudio.umd.js";
+        script.onload = function () {
+          if (!window.UnicornStudio.isInitialized) {
+            UnicornStudio.init();
+            window.UnicornStudio.isInitialized = true;
+          }
+        };
+        (document.head || document.body).appendChild(script);
+      }
+    })();
+  </script>
+</body>
 </html>
