--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     .embed-wrapper {
       position: absolute;
-      top: 36%;
-      left: 36%;
-      transform: translate(-36%, -36%); /* абсолютный центр */
-      width: 36vh; /* можно подстроить */
-      height: 36vh;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 57.5vh;
+      height: 57.5vh;
     }
 
     .unicorn-embed {
