--- a/loading.html
+++ b/loading.html
@@ -9,10 +9,10 @@
       margin: 0;
       padding: 0;
       height: 100vh;
-      background: white;
+      background: transparent; /* убрал белый фон */
       display: flex;
       justify-content: center;
-      align-items: center; /* по центру по вертикали */
+      align-items: center;
     }
 
     .text {
