--- a/index.html
+++ b/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Unicorn Embed</title>
+  <title>Unicorn + Loader</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100vh;
       background: white;
+      width: 100%;
+      height: 100vh;
       overflow: hidden;
+      position: relative;
+    }
+
+    .loader-text {
+      position: absolute;
+      top: 32px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
+      background-size: 200% auto;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      animation: shimmer 2s infinite linear;
+      z-index: 2;
+      pointer-events: none;
+    }
+
+    @keyframes shimmer {
+      0%   { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
     }
 
     .embed-wrapper {
@@ -17,8 +43,9 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 50vh;
-      height: 50vh;
+      width: 57.5vh;
+      height: 57.5vh;
+      z-index: 1;
     }
 
     .unicorn-embed {
@@ -28,6 +55,8 @@
   </style>
 </head>
 <body>
+  <div class="loader-text">Generating your video…</div>
+
   <div class="embed-wrapper">
     <div
       class="unicorn-embed"
