--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
       position: relative;
     }
 
-    .loader-text {
+    .center-wrapper {
       position: absolute;
-      top: 32px;
+      top: 50%;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+
+    .loader-text {
       font-family: 'Inter', sans-serif;
       font-size: 16px;
       font-weight: 500;
@@ -29,8 +33,7 @@
       -webkit-background-clip: text;
       color: transparent;
       animation: shimmer 2s infinite linear;
-      z-index: 2;
-      pointer-events: none;
+      margin-bottom: 24px;
     }
 
     @keyframes shimmer {
@@ -39,13 +42,9 @@
     }
 
     .embed-wrapper {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       width: 57.5vh;
       height: 57.5vh;
-      z-index: 1;
+      margin: 0 auto;
     }
 
     .unicorn-embed {
@@ -55,13 +54,14 @@
   </style>
 </head>
 <body>
-  <div class="loader-text">Generating your video…</div>
-
-  <div class="embed-wrapper">
-    <div
-      class="unicorn-embed"
-      data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
-    ></div>
+  <div class="center-wrapper">
+    <div class="loader-text">Generating your video…</div>
+    <div class="embed-wrapper">
+      <div
+        class="unicorn-embed"
+        data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
+      ></div>
+    </div>
   </div>
 
   <script type="text/javascript">
