--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
       background: white;
       width: 100%;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       overflow: hidden;
-      position: relative;
     }
 
     .center-wrapper {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     .loader-text {
@@ -44,7 +45,9 @@
     .embed-wrapper {
       width: 57.5vh;
       height: 57.5vh;
-      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .unicorn-embed {
