--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
       background: white;
       width: 100%;
       height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       overflow: hidden;
     }
 
-    .center-wrapper {
+    .center-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -34,7 +35,7 @@
       -webkit-background-clip: text;
       color: transparent;
       animation: shimmer 2s infinite linear;
-      margin-bottom: 24px;
+      margin-bottom: 20px;
     }
 
     @keyframes shimmer {
@@ -43,11 +44,8 @@
     }
 
     .embed-wrapper {
-      width: 57.5vh;
-      height: 57.5vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      width: 50vh;
+      height: 50vh;
     }
 
     .unicorn-embed {
@@ -57,13 +55,10 @@
   </style>
 </head>
 <body>
-  <div class="center-wrapper">
+  <div class="center-container">
     <div class="loader-text">Generating your video…</div>
     <div class="embed-wrapper">
-      <div
-        class="unicorn-embed"
-        data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
-      ></div>
+      <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
     </div>
   </div>
 
