--- a/index.html
+++ b/index.html
@@ -11,18 +11,11 @@
       background: white;
       width: 100%;
       height: 100vh;
-      overflow: hidden;
-    }
-
-    .center-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
+      gap: 20px; /* Расстояние между текстом и анимацией */
     }
 
     .loader-text {
@@ -35,7 +28,6 @@
       -webkit-background-clip: text;
       color: transparent;
       animation: shimmer 2s infinite linear;
-      margin-bottom: 20px;
     }
 
     @keyframes shimmer {
@@ -55,11 +47,9 @@
   </style>
 </head>
 <body>
-  <div class="center-container">
-    <div class="loader-text">Generating your video…</div>
-    <div class="embed-wrapper">
-      <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
-    </div>
+  <div class="loader-text">Generating your video…</div>
+  <div class="embed-wrapper">
+    <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
   </div>
 
   <script type="text/javascript">
