--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Unicorn + Loader</title>
+  <title>Generating...</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: white;
       width: 100%;
       height: 100vh;
+      background: white;
+    }
+
+    .center-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
-      gap: 20px; /* Расстояние между текстом и анимацией */
     }
 
     .loader-text {
@@ -28,6 +34,7 @@
       -webkit-background-clip: text;
       color: transparent;
       animation: shimmer 2s infinite linear;
+      margin-bottom: 20px;
     }
 
     @keyframes shimmer {
@@ -36,8 +43,8 @@
     }
 
     .embed-wrapper {
-      width: 50vh;
-      height: 50vh;
+      width: 200px;
+      height: 200px;
     }
 
     .unicorn-embed {
@@ -47,9 +54,11 @@
   </style>
 </head>
 <body>
-  <div class="loader-text">Generating your video…</div>
-  <div class="embed-wrapper">
-    <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
+  <div class="center-container">
+    <div class="loader-text">Generating your video…</div>
+    <div class="embed-wrapper">
+      <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
+    </div>
   </div>
 
   <script type="text/javascript">
