--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
       width: 100%;
       height: 100vh;
       background: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .center-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    .content {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -34,7 +33,7 @@
       -webkit-background-clip: text;
       color: transparent;
       animation: shimmer 2s infinite linear;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
     }
 
     @keyframes shimmer {
@@ -42,23 +41,16 @@
       100% { background-position: -200% 0; }
     }
 
-    .embed-wrapper {
-      width: 200px;
-      height: 200px;
-    }
-
     .unicorn-embed {
-      width: 100%;
-      height: 100%;
+      width: auto;
+      height: 50vh;
     }
   </style>
 </head>
 <body>
-  <div class="center-container">
+  <div class="content">
     <div class="loader-text">Generating your video…</div>
-    <div class="embed-wrapper">
-      <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
-    </div>
+    <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
   </div>
 
   <script type="text/javascript">
