--- a/index.html
+++ b/index.html
@@ -25,9 +25,25 @@
       width: 100%;
       height: 100%;
     }
+
+    .loading-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      color: black;
+      z-index: 10;
+      pointer-events: none;
+    }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div class="loading-text">Generating your video...</div>
+
   <div class="embed-wrapper">
     <div
       class="unicorn-embed"
