--- a/index.html
+++ b/index.html
@@ -34,9 +34,23 @@
       font-family: 'Inter', sans-serif;
       font-size: 16px;
       font-weight: 500;
-      color: black;
+      background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
+      background-size: 200% auto;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      animation: shimmer 2s infinite linear;
       z-index: 10;
       pointer-events: none;
+    }
+
+    @keyframes shimmer {
+      0% {
+        background-position: 200% 0;
+      }
+      100% {
+        background-position: -200% 0;
+      }
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
