--- a/index.html
+++ b/index.html
@@ -26,24 +26,45 @@
       height: 100%;
     }
 
-    .generating-text {
+    .loading-text {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-family: sans-serif;
+      font-family: 'Inter', sans-serif;
       font-size: 16px;
-      color: black;
+      font-weight: 500;
       text-shadow: 0 0 6px rgba(255, 255, 255, 0.6);
+      background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
+      background-size: 200% auto;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      animation: shimmer 2s infinite linear;
+      z-index: 10;
       pointer-events: none;
     }
+
+    @keyframes shimmer {
+      0% {
+        background-position: 200% 0;
+      }
+      100% {
+        background-position: -200% 0;
+      }
+    }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div class="loading-text">Generating your video...</div>
+
   <div class="embed-wrapper">
-    <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
+    <div
+      class="unicorn-embed"
+      data-us-project="hr1f8iuHw9s6Mw8Wb1sv"
+    ></div>
   </div>
-  <div class="generating-text">Generating your video...</div>
 
   <script type="text/javascript">
     (function () {
