--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      gap: 2vh; /* расстояние между звездой и текстом */
     }
 
     .unicorn-embed {
@@ -31,11 +32,10 @@
     }
 
     .loading-text {
-      margin-top: 12px;
       font-family: 'Inter', sans-serif;
-      font-size: 16px;
+      font-size: 1.6vh;
       font-weight: 500;
-      text-shadow: 0 0 12px rgba(255, 255, 255, 0.6);
+      text-shadow: 0 0 1.2vh rgba(255, 255, 255, 0.6);
       background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
       background-size: 200% auto;
       background-clip: text;
