--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
       transform: translate(-50%, -50%);
       width: 50vh;
       height: 50vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 2vh; /* расстояние между звездой и текстом */
     }
 
     .unicorn-embed {
@@ -32,17 +27,21 @@
     }
 
     .loading-text {
+      position: absolute;
+      bottom: 10vh;
+      left: 50%;
+      transform: translateX(-50%);
       font-family: 'Inter', sans-serif;
-      font-size: 1.6vh;
+      font-size: 16px;
       font-weight: 500;
-      text-shadow: 0 0 1.2vh rgba(255, 255, 255, 0.6);
       background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
       background-size: 200% auto;
       background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
-      animation: shimmer 3.2s infinite linear;
+      animation: shimmer 2s infinite linear;
       pointer-events: none;
+      z-index: 10;
     }
 
     @keyframes shimmer {
@@ -59,8 +58,9 @@
 <body>
   <div class="embed-wrapper">
     <div class="unicorn-embed" data-us-project="hr1f8iuHw9s6Mw8Wb1sv"></div>
-    <div class="loading-text">Generating your video...</div>
   </div>
+
+  <div class="loading-text">Generating your video...</div>
 
   <script type="text/javascript">
     (function () {
