--- a/index.html
+++ b/index.html
@@ -14,25 +14,30 @@
 
     .embed-wrapper {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 50vh;
-      height: 50vh;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .unicorn-embed {
       width: 100%;
       height: 100%;
+      /* Если нужно снова уменьшить до 50% — раскомментировать ниже: */
+      /* width: 50vh; */
+      /* height: 50vh; */
     }
 
     .loading-text {
       position: absolute;
-      bottom: 10vh;
+      bottom: 12vh;
       left: 50%;
       transform: translateX(-50%);
       font-family: 'Inter', sans-serif;
-      font-size: 16px;
+      font-size: 2.3vh;
       font-weight: 500;
       background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
       background-size: 200% auto;
