--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
     .embed-wrapper {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80vh;
+      height: 80vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -26,18 +27,15 @@
     .unicorn-embed {
       width: 100%;
       height: 100%;
-      /* Если нужно снова уменьшить до 50% — раскомментировать ниже: */
-      /* width: 50vh; */
-      /* height: 50vh; */
     }
 
     .loading-text {
       position: absolute;
-      bottom: 12vh;
+      bottom: 8vh;
       left: 50%;
       transform: translateX(-50%);
       font-family: 'Inter', sans-serif;
-      font-size: 2.3vh;
+      font-size: 1.4vh;
       font-weight: 500;
       background: linear-gradient(90deg, #000 0%, #000 40%, transparent 70%, #000 100%);
       background-size: 200% auto;
