--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       height: 100vh;
-      background: white;
+      background: transparent;
       overflow: hidden;
     }
 
@@ -16,12 +16,12 @@
     :root {
       /* Star Controls */
       --star-vertical-position: 50; /* 0 = top, 50 = center, 100 = bottom */
-      --star-scale: 100; /* percent of container height */
+      --star-scale: 75; /* percent of container height */
 
       /* Text Controls */
       --text-font-size: 1.8vh;
-      --text-vertical-position: 85; /* 0 = top, 50 = center, 100 = bottom */
-      --shimmer-speed: 2s;
+      --text-vertical-position: 75; /* 0 = top, 50 = center, 100 = bottom */
+      --shimmer-speed: 2.5s;
     }
 
     .embed-wrapper {
